crates/prek/src/snapshots/prek__config__tests__read_config.snap
---
source: crates/prek/src/config.rs
expression: config
---
Config {
    repos: [
        Remote(
            RemoteRepo {
                repo: "https://github.com/abravalheri/validate-pyproject",
                rev: "v0.20.2",
                hooks: [
                    RemoteHook {
                        id: "validate-pyproject",
                        name: None,
                        entry: None,
                        language: None,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            types: None,
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: None,
                            description: None,
                            language_version: None,
                            log_file: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {},
            },
        ),
        Remote(
            RemoteRepo {
                repo: "https://github.com/crate-ci/typos",
                rev: "v1.26.0",
                hooks: [
                    RemoteHook {
                        id: "typos",
                        name: None,
                        entry: None,
                        language: None,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            types: None,
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: None,
                            description: None,
                            language_version: None,
                            log_file: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {},
            },
        ),
        Local(
            LocalRepo {
                repo: "local",
                hooks: [
                    ManifestHook {
                        id: "cargo-fmt",
                        name: "cargo fmt",
                        entry: "cargo fmt --",
                        language: System,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            types: Some(
                                [
                                    "rust",
                                ],
                            ),
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: Some(
                                false,
                            ),
                            description: None,
                            language_version: None,
                            log_file: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {},
            },
        ),
        Local(
            LocalRepo {
                repo: "local",
                hooks: [
                    ManifestHook {
                        id: "cargo-dev-generate-all",
                        name: "cargo dev generate-all",
                        entry: "cargo dev generate-all",
                        language: System,
                        options: HookOptions {
                            alias: None,
                            files: Some(
                                FilePattern {
                                    kind: "Regex",
                                    sources: [
                                        "^crates/(uv-cli|uv-settings)/",
                                    ],
                                },
                            ),
                            exclude: None,
                            types: Some(
                                [
                                    "rust",
                                ],
                            ),
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: Some(
                                false,
                            ),
                            description: None,
                            language_version: None,
                            log_file: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {},
            },
        ),
        Remote(
            RemoteRepo {
                repo: "https://github.com/pre-commit/mirrors-prettier",
                rev: "v3.1.0",
                hooks: [
                    RemoteHook {
                        id: "prettier",
                        name: None,
                        entry: None,
                        language: None,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            types: None,
                            types_or: Some(
                                [
                                    "yaml",
                                    "json5",
                                ],
                            ),
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: None,
                            description: None,
                            language_version: None,
                            log_file: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {},
            },
        ),
        Remote(
            RemoteRepo {
                repo: "https://github.com/astral-sh/ruff-pre-commit",
                rev: "v0.6.9",
                hooks: [
                    RemoteHook {
                        id: "ruff-format",
                        name: None,
                        entry: None,
                        language: None,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            types: None,
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: None,
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: None,
                            description: None,
                            language_version: None,
                            log_file: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                    RemoteHook {
                        id: "ruff",
                        name: None,
                        entry: None,
                        language: None,
                        options: HookOptions {
                            alias: None,
                            files: None,
                            exclude: None,
                            types: None,
                            types_or: None,
                            exclude_types: None,
                            additional_dependencies: None,
                            args: Some(
                                [
                                    "--fix",
                                    "--exit-non-zero-on-fix",
                                ],
                            ),
                            always_run: None,
                            fail_fast: None,
                            pass_filenames: None,
                            description: None,
                            language_version: None,
                            log_file: None,
                            require_serial: None,
                            stages: None,
                            verbose: None,
                            minimum_prek_version: None,
                            _unused_keys: {},
                        },
                    },
                ],
                _unused_keys: {},
            },
        ),
    ],
    default_install_hook_types: None,
    default_language_version: None,
    default_stages: None,
    files: None,
    exclude: Some(
        FilePattern {
            kind: "Regex",
            sources: [
                "(?x)^(\n  .*/(snapshots)/.*|\n)$\n",
            ],
        },
    ),
    fail_fast: Some(
        true,
    ),
    minimum_prek_version: None,
    orphan: None,
    _unused_keys: {},
}
